--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.15.1",
     "axios": "^1.6.8",
     "next": "14.2.3",
     "react": "^18",
@@ -26,6 +27,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
+    "prisma": "^5.15.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
