--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.15.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.16.1",
+    "@types/bcrypt": "^5.0.2",
     "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
