feat: configured nextAuth

--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 #npx prisma db push 
 
-DATABASE_URL="mongodb+srv://sakshigupta:sakshigupta@cluster0.gf7gvrk.mongodb.net/test"
+DATABASE_URL="mongodb+srv://sakshigupta:sakshigupta@cluster0.gf7gvrk.mongodb.net/test",
+NEXTAUTH_SECRET = "NEXTAUTH_SECRET"
